--- a/Labyrinth/.gitignore
+++ b/Labyrinth/.gitignore
@@ -1,6 +1,10 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+# QT Settings
+*.pro.user
+*.pro
+
 *~
 *.autosave
 *.a
